[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://gui/h1_font.tres" type="DynamicFont" id=3]

[node name="menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="mainmenu" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = -73.5
margin_right = 108.5
margin_bottom = 73.5

[node name="title" type="Label" parent="mainmenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -58.0
margin_right = 92.0
margin_bottom = -27.0
custom_fonts/font = ExtResource( 3 )
text = "TANKS OF FREEDOM
3-D"
align = 1
valign = 1

[node name="buttons" type="VBoxContainer" parent="mainmenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -83.0
margin_right = 54.0
margin_bottom = -30.0

[node name="start" type="Button" parent="mainmenu/buttons"]
margin_right = 108.0
margin_bottom = 15.0
text = "START TEST MAP"

[node name="settings" type="Button" parent="mainmenu/buttons"]
margin_top = 19.0
margin_right = 108.0
margin_bottom = 34.0
text = "SETTINGS"

[node name="quit" type="Button" parent="mainmenu/buttons"]
margin_top = 38.0
margin_right = 108.0
margin_bottom = 53.0
text = "QUIT"

[node name="verion" type="Label" parent="mainmenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = 52.5
margin_right = 92.5
margin_bottom = 65.5
text = "version pre-alpha / test"
align = 1
valign = 1

[connection signal="pressed" from="mainmenu/buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="mainmenu/buttons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="mainmenu/buttons/quit" to="." method="_on_quit_pressed"]
